<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoSUP</string>

    <!-- Map -->
    <string name="map_title">Map</string>
    <string name="map_file_name">ImageryTPK.tpk</string>
    <string name="json_file_name">myjsonfeatures1.json</string>
    <string name="no_external_memory_error">No external memory</string>
    <string name="map_file_not_found_error">No map file finded</string>
    <string name="notes">Notes</string>
    <string name="download">Download from ArcgisPage</string>
    <string name="find">Find</string>
    <string name="refresh">Refresh</string>

    <!-- Messenger -->
    <string name="messenger_title">Messenger</string>
    <string name="add_contact">Add contact</string>
    <string name="create">New message</string>

    <!-- Settings -->
    <string name="server_settings">Server Settings</string>
    <string name="server_address">Server address</string>
    <string name="login">Login</string>
    <string name="map_settings">Map Settings</string>
    <string name="show_layer">Show layer</string>
    <string name="settings">Settings</string>
    <string name="map_site">Map site</string>

    <!-- Notes -->
    <string name="take_photo">Take photo</string>
    <string name="add_note_text">Add note here.</string>
    <string name="note_save_error">Error during saving note occurred</string>
    <string name="note_save_success">Note has been saved</string>
    <string name="photo_take_error">Error during taking photo occurred</string>
    <string name="not_attached_photo">Photo not attached</string>

    <!-- Enable Dialog -->
    <string name="not_enabled">%s not enabled</string>
    <string name="ask_for_settings">Do you want to go to settings menu?</string>

    <!-- GPS -->
    <string name="gps_disabled">GPS disabled. Enable for application to work properly.</string>

    <!-- Defaults -->
    <string name="default_map_site">http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer</string>

    <!-- Buttons -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- About -->
    <string name="about_agh_description">University of Science and Technology</string>
    <string name="about">About</string>
    <string name="about_icons"><u><b><i>App icons by Timothy Miller</i></b></u></string>
    <string name="about_icons_more">more</string>
    <string name="author_ucash">Łukasz Cieśla</string>
    <string name="author_pkarp">Paulina Karp</string>
    <string name="author_sylgas">Sylwia Gąsior</string>
    <string name="icon_description">Icon</string>

    <!-- Action List -->
    <string name="action_list">Action list</string>

</resources>
