<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/map_settings">
        <CheckBoxPreference
            android:key="showLayer"
            android:title="@string/show_layer"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/server_settings">
        <EditTextPreference
            android:key="serverAddress"
            android:title="@string/server_address"/>
        <EditTextPreference
            android:defaultValue="@string/default_map_site"
            android:key="mapSite"
            android:title="@string/server_address"/>
        <EditTextPreference
            android:key="login"
            android:title="@string/login"/>
    </PreferenceCategory>

</PreferenceScreen>
