<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/messenger"
        android:title="@string/messenger_title"
        android:icon="@drawable/ic_message"
        android:showAsAction="ifRoom">
        <menu />
    </item>

    <item
        android:id="@+id/notes"
        android:title="@string/notes"
        android:icon="@drawable/ic_note"
        android:showAsAction="ifRoom">
        <menu />
    </item>

    <!--    <item
            android:id="@+id/download"
            android:title="@string/download"
            android:icon="@android:drawable/stat_sys_download"
            android:showAsAction="ifRoom">
            <menu />
        </item>-->

    <!--
        <item
            android:id="@+id/find"
            android:title="@string/find"
            android:icon="@android:drawable/ic_menu_search"
            android:showAsAction="ifRoom">
            <menu />
        </item>
    -->

    <item
        android:id="@+id/settings"
        android:title="@string/settings">
        <menu />
    </item>

</menu>